test_output_2.txt
Creating test database for alias 'default'...
E...
======================================================================
ERROR: test_auction_detail_elements (auctions.tests_frontend.FrontendFeatureTests.test_auction_detail_elements)
Test detail page for gallery, watchlist, and bid section.
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/Users/dimanjan/aliaunction/auctions/tests_frontend.py", line 49, in test_auction_detail_elements
    response = self.client.get(reverse('auction_detail', args=[self.auction.id]))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/test/client.py", line 1124, in get
    response = super().get(
               ^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/test/client.py", line 475, in get
    return self.generic(
           ^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/test/client.py", line 671, in generic
    return self.request(**r)
           ^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/test/client.py", line 1087, in request
    self.check_exception(response)
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/test/client.py", line 802, in check_exception
    raise exc_value
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/core/handlers/base.py", line 198, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/auctions/views.py", line 172, in auction_detail
    return render(request, 'auctions/auction_detail.html', {
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/backends/django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/engine.py", line 186, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/loaders/base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/base.py", line 157, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/base.py", line 199, in compile_nodelist
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/base.py", line 585, in parse
    raise self.error(token, e)
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/base.py", line 583, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/loader_tags.py", line 307, in do_extends
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/base.py", line 585, in parse
    raise self.error(token, e)
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/base.py", line 583, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/loader_tags.py", line 235, in do_block
    nodelist = parser.parse(("endblock",))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/base.py", line 585, in parse
    raise self.error(token, e)
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/base.py", line 583, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/defaulttags.py", line 1676, in do_with
    extra_context = token_kwargs(remaining_bits, parser, support_legacy=True)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/base.py", line 1202, in token_kwargs
    kwargs[key] = parser.compile_filter(value)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/base.py", line 676, in compile_filter
    return FilterExpression(token, self)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dimanjan/aliaunction/venv/lib/python3.12/site-packages/django/template/base.py", line 776, in __init__
    raise TemplateSyntaxError(
django.template.exceptions.TemplateSyntaxError: Template: /Users/dimanjan/aliaunction/auctions/templates/auctions/auction_detail.html, Could not parse the remainder: '(auction)' from 'get_auction_status(auction)'

----------------------------------------------------------------------
Ran 4 tests in 3.318s

FAILED (errors=1)
Destroying test database for alias 'default'...
Found 4 test(s).

-----

WeasyPrint could not import some external libraries. Please carefully follow the installation steps before reporting an issue:
https://doc.courtbouillon.org/weasyprint/stable/first_steps.html#installation
https://doc.courtbouillon.org/weasyprint/stable/first_steps.html#troubleshooting 

-----

System check identified no issues (0 silenced).
